table: fix white space collision between table responsive and produkt:hover when width < 768

--- a/pol/static/css/main.css
+++ b/pol/static/css/main.css
@@ -57,7 +57,7 @@
 
 .produkt:hover td {
     background-color: white;
-    white-space: normal;
+    white-space: normal !important;
 }
 
 .produktdiv {
